--- a/js-counter/index.html
+++ b/js-counter/index.html
@@ -15,7 +15,8 @@
         <div id="wrapper">
             <p id="number">0</p>
             <div id="button-wrapper">
-                <input type="button" value="+" id="addition" onclick="add()"/>
+                <input type="button" value="+1" id="addition" onclick="add(1)"/>
+                <input type="button" value="+10" id="addition" onclick="add(10)"/>
             </div>
         </div>
         <script src="script.js"></script>
