Add function to subtract

--- a/js-counter/index.html
+++ b/js-counter/index.html
@@ -17,6 +17,7 @@
             <div id="button-wrapper">
                 <input type="button" value="+1" id="addition" onclick="add(1)"/>
                 <input type="button" value="+10" id="addition" onclick="add(10)"/>
+                <input type="button" value="-5" id="addition" onclick="subtract(5)"/>
             </div>
         </div>
         <script src="script.js"></script>
