Add reset function

--- a/js-counter/index.html
+++ b/js-counter/index.html
@@ -17,7 +17,11 @@
             <div id="button-wrapper">
                 <input type="button" value="+1" id="addition" onclick="add(1)"/>
                 <input type="button" value="+10" id="addition" onclick="add(10)"/>
-                <input type="button" value="-5" id="addition" onclick="subtract(5)"/>
+                <input type="button" value="-5" id="subtraction" onclick="subtract(5)"/>
+                <input type="button" value="reset" id="reset" onclick="reset()"/>
+            </div>
+            <div id="button-wrapper">
+
             </div>
         </div>
         <script src="script.js"></script>
