Add ability to specify increment by user input

--- a/js-counter/index.html
+++ b/js-counter/index.html
@@ -20,9 +20,12 @@
                 <input type="button" value="-5" id="subtraction" onclick="subtract(5)"/>
                 <input type="button" value="reset" id="reset" onclick="reset()"/>
             </div>
-            <div id="button-wrapper">
-
-            </div>
+                <div id="button-wrapper">
+                    <input type="button" value="subtract..." id="subtraction" onclick="subtractby()"/>
+                    <input type="button" value="add..." id="addition" onclick="addby()"/>
+                    <br />
+                    <input type="text" name="increment" id="usernum" />
+                </div>
         </div>
         <script src="script.js"></script>
     </body>
